--- a/src/utility/theme/variable.scss
+++ b/src/utility/theme/variable.scss
@@ -13,6 +13,8 @@ $size16: 16px;
 $size18: 18px;
 $size20: 20px;
 $size22: 22px;
+$size30: 30px;
+$size36: 36px;
 //<-------- Font weight ------->
 $fontWeight200: 200;
 $fontWeight400: 400;
