--- a/src/components/ErrorMessage/error-message.scss
+++ b/src/components/ErrorMessage/error-message.scss
@@ -18,7 +18,8 @@
   font-size: $size20;
   font-family: $primaryFontFamily;
   display: block;
-  width: 500px;
+  width: 100%;
+  height:100%;
   margin: 100px auto;
   text-align: center;
   .icon {
