integrated graphiql editor

--- a/src/components/GraphiqlEditor/GraphiqlEditor.scss
+++ b/src/components/GraphiqlEditor/GraphiqlEditor.scss
@@ -1,5 +1,5 @@
-.toolbarEditor{
-    width: 80%;
-    height: 80%;
-    border-radius: 20px;
+.graphiQLEditor {
+  width: calc(100vw - 310px);
+  height: calc(91vh - 76px);
+  border-radius: 20px;
 }
