--- a/src/components/GraphData/graph-data.scss
+++ b/src/components/GraphData/graph-data.scss
@@ -165,9 +165,12 @@
   border: none;
   border-radius: $size5;
   position: absolute;
-  right: 120px;
+  right: 130px;
   top: 13px;
+  width: 40px;
+    height: 38px;
 }
+
 @media screen and (max-width: 600px) {
   .toolbar {
     .menu-container {
