--- a/src/components/GraphiqlEditor/GraphiqlEditor.scss
+++ b/src/components/GraphiqlEditor/GraphiqlEditor.scss
@@ -3,3 +3,8 @@
   height: calc(91vh - 76px);
   border-radius: 20px;
 }
+.graphiQLEditor-drawer-open{
+  width: 100vw;
+  height: calc(91vh - 76px);
+ 
+}
