--- a/src/utility/theme/light-theme.scss
+++ b/src/utility/theme/light-theme.scss
@@ -1,5 +1,5 @@
 [theme-selector='light'] {
-  --baseColor: rgb(30, 136, 229);
+  --baseColor: rgb(30, 136, 229) !important;
   --navbarBoxShadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   --fontPrimaryColor: rgb(33, 33, 33);
   --primaryBorderColor: rgb(21, 101, 192);
@@ -18,5 +18,5 @@
   --listIconColour: #808080;
   --loaderBackground: #fff;
   --loaderTextColor: black;
-  --iconBackgroundColor: rgb(21, 101, 192);
+  --iconBackgroundColor: rgb(21, 101, 192) !important;
 }
